@@ -19,7 +19,7 @@ minecraft_version_range=[1.20.3,1.21)
 # The Neo version must agree with the Minecraft version to get a valid artifact
 neo_version=20.3.8-beta
 # The Neo version range can use any version of Neo as bounds or match the loader version range
-neo_version_range=[20.3.8-beta,)
+neo_version_range=[20.3,)
 # The loader version range can only use the major version of Neo/FML as bounds
 loader_version_range=[1,)
 
@@ -28,8 +28,8 @@ loader_version_range=[1,)
 mod_id=morevanillashields
 mod_name=More Vanilla Shields
 mod_license=MIT License
-mod_version=1.0.2-1.20.3
+mod_version=1.0.3-1.20.3
 mod_group_id=com.rajhab.morevanillashields_mod
 mod_authors=Rajhab
-mod_description=Tired of having just the normal vanilla Iron Shield? \n\nThere you go! \n\nA simple mod that allows you to craft more than just the vanilla Iron Shield! \n\n 1.0.2-1.20.3-20.3.8-beta
+mod_description=Tired of having just the normal vanilla Iron Shield? \n\nThere you go! \n\nA simple mod that allows you to craft more than just the vanilla Iron Shield! \n\n 1.0.3-1.20.3-20.3.8-beta
 pack_format_number=22
