@@ -1,6 +1,7 @@
 package com.rajhab.morevanillashields_mod;
 
 import com.mojang.logging.LogUtils;
+import com.rajhab.morevanillashields_mod.event.ShieldEventHandler;
 import com.rajhab.morevanillashields_mod.item.ModCreativeModeTabs;
 import com.rajhab.morevanillashields_mod.item.ModItems;
 import com.rajhab.morevanillashields_mod.util.ModRecipeSerializer;
@@ -30,7 +31,7 @@ public class morevanillashields
         ModItems.register(modEventBus);
         ModRecipeSerializer.register(modEventBus);
         ModCreativeModeTabs.register(modEventBus);
-
+        NeoForge.EVENT_BUS.register(ShieldEventHandler.class);
     }
 
     private void commonSetup(final FMLCommonSetupEvent event)
